Refactor game logic and UI for Rock, Paper, Scissors game; add event listeners for player choices and implement scoring system

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Styles/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="scores">
+        <h3>Player score:</h3>
+        <h3>Computer Score:</h3>
+    </div>
+    <div class="container">
+        <button class="btn" id="rock">Rock</button>
+        <button class="btn" id="paper">Paper</button>
+        <button class="btn" id="scissors">Scissors</button>
+    </div>
+
     <script src="game.js"></script>
 </body>
 </html>
