Add scoring display and reset functionality for Rock, Paper, Scissors game

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="scores">
-        <h3>Player score:</h3>
-        <h3>Computer Score:</h3>
+        <h3>Player score:</h3> <p id="p_score"></p>
+        <h3>Computer Score:</h3> <p id="c_score"></p>
     </div>
     <div class="container">
         <button class="btn" id="rock">Rock</button>
